# data-science-toolkit

./: .ghci  LICENSE  README.md  data-science-toolkit.cabal  stack.yaml
app/: BuildTNRInstances.hs  Main.hs
src/Data/: Frame.hs
src/Data/Frame/: Extras.hs  Instances.hs  Join.hs  Plot.hs
src/Labels/: Csv.hs
