name:                data-science-toolkit
version:             0.0.0.1
synopsis:            Very simple data frame, data frame operations and integrated plotting library. Experimental and prone to rapid changes.
-- description:
homepage:            https://github.com/ajovanov93/data-science-toolkit#readme
license:             BSD3
license-file:        LICENSE
author:              Aleksandar Jovanov
maintainer:          aleksandar.jovanov.1995@gmail.com
copyright:           Aleksandar Jovanov 2017 & Chrise Done 2016 (Labels, Labels Cassava)
category:            Data Analysis
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2 
  exposed-modules:     Labels.Csv,
                       Labels.Cassava.Instances,
                       Data.Frame,
                       Data.Frame.Join,
                       Data.Frame.Plot,
                       Data.Frame.Extras,
                       Data.Frame.Instances
  build-depends:       base >= 4.7 && < 5,
                       -- Data frame
                       template-haskell,
                       labels,
                       cassava,
                       bytestring,
                       unordered-containers,
                       vector,
                       -- Joins & groupby & sortByD
                       discrimination,
                       -- Plotting
                       Chart,
                       Chart-cairo
  default-language:    Haskell2010

executable data-science-toolkit-showcase
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base,
                       data-science-toolkit,
                       vector,
                       labels,
                       cassava,
                       statistics,
                       linear,
                       sibe,
                       text,
                       foldl,
                       Chart
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ajovanov93/data-science-toolkit
